# EliteNews

./: README.md
rust-bot/: .gitignore  Cargo.toml  README.md
rust-bot/sql/: schema.sql
rust-bot/src/: bot.rs  config.rs  db.rs  elite_api.rs  main.rs  processor.rs  types.rs
